--- a/global.css
+++ b/global.css
@@ -13,8 +13,20 @@ img{
     max-width: 100%;
 }
 a{
-    text-decoration: none;
+    text-decoration: none !important ;
     display: inline-block;
+        border-bottom: 1px solid rgba(0, 106, 255, 0.5);
+    box-sizing: border-box;
+    cursor: pointer;
+    color: rgb(0, 106, 255) !important;
+    position: relative;
+    text-decoration: none;
+    transition: 0.15s ease-in-out;
+    line-height: 1.3;
+}
+a:hover{
+    border-bottom: 1px solid #006aff;
+    text-shadow: 0 0 1px #006aff;
 }
 p ,ul{
     padding: 0;
@@ -43,6 +55,7 @@ ul li{
     align-items: center;
     justify-content: center;
     font-family: Roboto, sans-serif;
+    text-decoration: none;
 }
 .common_btn_blue:hover{
         background-color: rgb(0, 106, 255) !important;
